--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </section>
     <footer>
         <div class="social-media">
-            <a href="#" target="_blank"><i class="bx bxl-facebook"></i></a>
-            <a href="#" target="_blank"><i class="bx bxl-instagram"></i></a>
-            <a href="#" target="_blank"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.facebook.com/thegfxbeast?mibextid=ZbWKwL" target="_blank"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/mr.everythiiing" target="_blank"><i class="bx bxl-instagram"></i></a>
+            <a href="https://youtube.com/@mr.everythiiing" target="_blank"><i class="bx bxl-youtube"></i></a>
             <a href="#" target="_blank"><i class="bx bxl-linkedin"></i></a>
             <a href="#" target="_blank"><i class="bx bxl-behance"></i></a>
         </div>
