new file:   images/Image1.jpeg 	deleted:    images/image1.png 	modified:   index.html 	modified:   pages/about.html 	modified:   pages/work.html 	modified:   style/about.css 	modified:   style/home.css

--- a/pages/work.html
+++ b/pages/work.html
@@ -23,10 +23,14 @@
     </header>
 
     <section class="work">
-        <div class="title">
-            <h1 class="main-title">My Works</h1>
-            <h1 class="hover-title">Work</h1>
+        <!-- Headings -->
+        <div class="back-heading">
+            <h1 class="fade-heading">Work</h1>
+            <div class="front-heading">
+                <h2 class="heading">My <span class="spantxt">Works</span></h2>
+            </div>
         </div>
+
         <div class="work-content">
             <div class="work-item"></div>
             <div class="work-item"></div>
