--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="https://www.instagram.com/mr.everythiiing" target="_blank"><i class="bx bxl-instagram"></i></a>
             <a href="https://youtube.com/@mr.everythiiing" target="_blank"><i class="bx bxl-youtube"></i></a>
             <a href="#" target="_blank"><i class="bx bxl-linkedin"></i></a>
-            <a href="#" target="_blank"><i class="bx bxl-behance"></i></a>
+            <a href="https://www.behance.net/thegfxbeast" target="_blank"><i class="bx bxl-behance"></i></a>
         </div>
     </footer>
 </body>
