--- a/pages/about.html
+++ b/pages/about.html
@@ -23,13 +23,24 @@
     </header>
 
     <section class="about">
-        <div class="img"></div>
+
+        <!-- Headings -->
+        <div class="back-heading">
+            <h1 class="fade-heading">About</h1>
+            <div class="front-heading">
+                <h2 class="heading">About <span class="spantxt">Me</span></h2>
+            </div>
+        </div>
+        
         <div class="about-content">
-            <h1 class="intro">Shahadat <span class="orange">Hussain</span></h1>
-            <h2 class="prof">A <span class="multitext">Graphic Designer</span></h2>
-            <hr class="dash">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo est iure molestiae, commodi praesentium voluptatum perferendis totam impedit corrupti nobis omnis maxime inventore ipsa!</p>
-            <a href="#" class="btn">Learn More</a>
+            <img src="../images/Image1.jpeg" alt="">
+            <div class="about-me">
+                <h1 class="intro">Shahadat <span class="orange">Hussain</span></h1>
+                <h2 class="prof">A <span class="multitext">Graphic Designer</span></h2>
+                <hr class="dash">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo est iure molestiae, commodi praesentium voluptatum perferendis totam impedit corrupti nobis omnis maxime inventore ipsa!</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
         </div>
     </section>
 </body>
