--- a/pages/about.html
+++ b/pages/about.html
@@ -23,24 +23,13 @@
     </header>
 
     <section class="about">
-
-        <!-- Headings -->
-        <div class="back-heading">
-            <h1 class="fade-heading">About</h1>
-            <div class="front-heading">
-                <h2 class="heading">About <span class="spantxt">Me</span></h2>
-            </div>
-        </div>
-        
+        <img src="../images/Image1.jpeg">
         <div class="about-content">
-            <img src="../images/Image1.jpeg" alt="">
-            <div class="about-me">
                 <h1 class="intro">Shahadat <span class="orange">Hussain</span></h1>
                 <h2 class="prof">A <span class="multitext">Graphic Designer</span></h2>
                 <hr class="dash">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo est iure molestiae, commodi praesentium voluptatum perferendis totam impedit corrupti nobis omnis maxime inventore ipsa!</p>
                 <a href="#" class="btn">Learn More</a>
-            </div>
         </div>
     </section>
 </body>
