modified:   pages/work.html 	modified:   style/work.css

--- a/pages/work.html
+++ b/pages/work.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="../style/home.css">
     <link rel="stylesheet" href="../style/work.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 <body>
     <header class="header">
@@ -23,21 +24,36 @@
     </header>
 
     <section class="work">
-        <!-- Headings -->
-        <div class="back-heading">
-            <h1 class="fade-heading">Work</h1>
-            <div class="front-heading">
-                <h2 class="heading">My <span class="spantxt">Works</span></h2>
-            </div>
-        </div>
-
         <div class="work-content">
-            <div class="work-item"></div>
-            <div class="work-item"></div>
-            <div class="work-item"></div>
-            <div class="work-item"></div>
-            <div class="work-item"></div>
-            <div class="work-item"></div>
+            <div class="work-item">
+                <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/26de44141124161.624ddccb84345.jpg">
+                <div class="layer">
+                    <h4>Gym Social Media Post</h4>
+                    <a href="https://www.behance.net/gallery/141124161/Gym-social-media-post-design-for-gym/modules/797358001" target="_blank"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+            <div class="work-item">
+                <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/228101143788591.62812ebed84d0.jpg">
+                <div class="layer">
+                    <h4>Logo Design For Tech Lancer Den</h4>
+                    <a href="https://www.behance.net/gallery/143788591/Logo-Design-for-Tech-Lancer-Den/modules/812337817" target="_blank"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+            <div class="work-item">
+                <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/e339a4143789237.628131853a80c.jpg">
+                <div class="layer">
+                    <h4>Logo Design For Cargo One</h4>
+                    <a href="https://www.behance.net/gallery/143789237/logo-concepts-for-cargo-one/modules/812341819" target="_blank"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+            <div class="work-item">
+                <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/eda867141927349.625da8562fc2c.jpg">
+                <div class="layer">
+                    <h4>Professional One Sided Business Card</h4>
+                    <a href="https://www.behance.net/gallery/141927349/professional-looking-one-sided-business-card-designs/modules/801795185" target="_blank"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+        </div>    
     </section>
 </body>
 </html>
