modified:   pages/work.html 	modified:   style/home.css 	modified:   style/work.css

--- a/pages/work.html
+++ b/pages/work.html
@@ -24,6 +24,13 @@
     </header>
 
     <section class="work">
+        <!-- Headings -->
+        <div class="back-heading">
+            <h1 class="fade-heading">Graphics</h1>
+            <div class="front-heading">
+                <h2 class="heading">Graphic <span class="spantxt">Design</span></h2>
+            </div>
+        </div>
         <div class="work-content">
             <div class="work-item">
                 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/26de44141124161.624ddccb84345.jpg">
@@ -53,7 +60,25 @@
                     <a href="https://www.behance.net/gallery/141927349/professional-looking-one-sided-business-card-designs/modules/801795185" target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
-        </div>    
+        </div> 
+
+        <a href="https://www.behance.net/thegfxbeast/projects" target="_blank" class="btn">Show More</a> 
+
+        <!-- Headings -->
+        <div class="back-heading">
+            <h1 class="fade-heading">Videos</h1>
+            <div class="front-heading">
+                <h2 class="heading">Video <span class="spantxt">Edits</span></h2>
+            </div>
+        </div>
+
+        <!-- Headings -->
+        <div class="back-heading">
+            <h1 class="fade-heading">Coming</h1>
+            <div class="front-heading">
+                <h2 class="heading">Coming <span class="spantxt">Soon</span></h2>
+            </div>
+        </div>
     </section>
 </body>
 </html>
