modified:   index.html 	modified:   pages/about.html 	modified:   pages/work.html 	new file:   script/script.js 	modified:   style/home.css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="home">
         <div class="home-content">
             <h1 class="intro">Shahadat <span class="orange">Hussain</span></h1>
-            <h2 class="prof">A <span class="multitext">Graphic Designer</span></h2>
+            <h2 class="prof">A <span class="multitext"></span></h2>
         </div>
         <div class="btn-container">
             <a href="./pages/contact.html" class="btn">Hire Me</a>
@@ -37,5 +37,14 @@
             <a href="https://www.behance.net/thegfxbeast" target="_blank"><i class="bx bxl-behance"></i></a>
         </div>
     </footer>
+
+    <!-- Scroll Reveal -->
+	<script src="https://unpkg.com/scrollreveal"></script>
+
+	<!-- Typed JS -->
+	<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+	<!-- JavaScript -->
+	<script src="./script/script.js"></script>
 </body>
 </html>
