--- a/pages/about.html
+++ b/pages/about.html
@@ -29,8 +29,17 @@
                 <h2 class="prof">A <span class="multitext">Graphic Designer</span></h2>
                 <hr class="dash">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo est iure molestiae, commodi praesentium voluptatum perferendis totam impedit corrupti nobis omnis maxime inventore ipsa!</p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="#" class="btn left">Learn More</a>
         </div>
     </section>
+
+    <!-- Scroll Reveal -->
+	<script src="https://unpkg.com/scrollreveal"></script>
+
+	<!-- Typed JS -->
+	<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+	<!-- JavaScript -->
+	<script src="../script/script.js"></script>
 </body>
 </html>
