--- a/pages/work.html
+++ b/pages/work.html
@@ -80,5 +80,13 @@
             </div>
         </div>
     </section>
+    <!-- Scroll Reveal -->
+	<script src="https://unpkg.com/scrollreveal"></script>
+
+	<!-- Typed JS -->
+	<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+	<!-- JavaScript -->
+	<script src="../script/script.js"></script>
 </body>
 </html>
