modified:   index.html 	modified:   pages/about.html 	modified:   pages/contact.html 	new file:   pages/skills.html 	modified:   pages/work.html 	new file:   script/about_script.js 	modified:   script/script.js 	new file:   script/skills_script.js 	new file:   script/work_script.js 	new file:   style/skills.css

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,6 +16,7 @@
         <nav class="navbar">
             <a href="../index.html">Home</a>
             <a href="#" class="active">About</a>
+            <a href="./skills.html">Skills</a>
             <a href="./work.html">Work</a>
             <a href="./contact.html">Contact</a>
         </nav>
@@ -29,7 +30,9 @@
                 <h2 class="prof">A <span class="multitext">Graphic Designer</span></h2>
                 <hr class="dash">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo est iure molestiae, commodi praesentium voluptatum perferendis totam impedit corrupti nobis omnis maxime inventore ipsa!</p>
-                <a href="#" class="btn left">Learn More</a>
+                <div class="bottom">
+                    <a href="#" class="btn">Learn More</a>
+                </div>
         </div>
     </section>
 
@@ -40,6 +43,6 @@
 	<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
 	<!-- JavaScript -->
-	<script src="../script/script.js"></script>
+	<script src="../script/about_script.js"></script>
 </body>
 </html>
