--- a/pages/work.html
+++ b/pages/work.html
@@ -17,6 +17,7 @@
         <nav class="navbar">
             <a href="../index.html">Home</a>
             <a href="./about.html">About</a>
+            <a href="./skills.html">Skills</a>
             <a href="#" class="active">Work</a>
             <a href="./contact.html">Contact</a>
         </nav>
@@ -32,28 +33,28 @@
             </div>
         </div>
         <div class="work-content">
-            <div class="work-item">
+            <div class="work-item left">
                 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/26de44141124161.624ddccb84345.jpg">
                 <div class="layer">
                     <h4>Gym Social Media Post</h4>
                     <a href="https://www.behance.net/gallery/141124161/Gym-social-media-post-design-for-gym/modules/797358001" target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
-            <div class="work-item">
+            <div class="work-item right">
                 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/228101143788591.62812ebed84d0.jpg">
                 <div class="layer">
                     <h4>Logo Design For Tech Lancer Den</h4>
                     <a href="https://www.behance.net/gallery/143788591/Logo-Design-for-Tech-Lancer-Den/modules/812337817" target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
-            <div class="work-item">
+            <div class="work-item left">
                 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/e339a4143789237.628131853a80c.jpg">
                 <div class="layer">
                     <h4>Logo Design For Cargo One</h4>
                     <a href="https://www.behance.net/gallery/143789237/logo-concepts-for-cargo-one/modules/812341819" target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
-            <div class="work-item">
+            <div class="work-item right">
                 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/eda867141927349.625da8562fc2c.jpg">
                 <div class="layer">
                     <h4>Professional One Sided Business Card</h4>
@@ -62,8 +63,9 @@
             </div>
         </div> 
 
-        <a href="https://www.behance.net/thegfxbeast/projects" target="_blank" class="btn">Show More</a> 
-
+        <div class="bottom">
+            <a href="https://www.behance.net/thegfxbeast/projects" target="_blank" class="btn">Show More</a> 
+        </div>
         <!-- Headings -->
         <div class="back-heading">
             <h1 class="fade-heading">Videos</h1>
@@ -87,6 +89,6 @@
 	<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
 	<!-- JavaScript -->
-	<script src="../script/script.js"></script>
+	<script src="../script/work_script.js"></script>
 </body>
 </html>
