--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             <a href="./pages/about.html">About</a>
+            <a href="./pages/skills.html">Skills</a>
             <a href="./pages/work.html">Work</a>
             <a href="./pages/contact.html">Contact</a>
         </nav>
