--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,6 +14,7 @@
         <nav class="navbar">
             <a href="../index.html">Home</a>
             <a href="./about.html">About</a>
+            <a href="./skills.html">Skills</a>
             <a href="./work.html">Work</a>
             <a href="#" class="active">Contact</a>
         </nav>
