modified:   index.html 	modified:   pages/about.html 	modified:   pages/contact.html 	modified:   pages/skills.html 	modified:   pages/work.html 	modified:   script/about_script.js 	modified:   style/contact.css 	new file:   style/media.css

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="../style/home.css">
     <link rel="stylesheet" href="../style/about.css">
+    <link rel="stylesheet" href="../style/media.css">
 </head>
 <body>
     <header class="header">
