--- a/pages/skills.html
+++ b/pages/skills.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="../style/home.css">
     <link rel="stylesheet" href="../style/skills.css">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <link rel="stylesheet" href="../style/media.css">
 </head>
 <body>
     <header class="header">
