--- a/pages/work.html
+++ b/pages/work.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="../style/home.css">
     <link rel="stylesheet" href="../style/work.css">
+    <link rel="stylesheet" href="../style/media.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 <body>
