--- a/pages/skills.html
+++ b/pages/skills.html
@@ -25,61 +25,58 @@
     </header>
 
     <section class="skills">
-        <!-- Headings -->
-        <div class="back-heading">
-            <h1 class="fade-heading">Skills</h1>
-            <div class="front-heading">
-                <h2 class="heading">My <span class="spantxt">Skills</span></h2>
-            </div>
-        </div>
-            <div class="skill-content">  
-                <ul>
-                    <li>
-                        <div class="skill">
-                            <h3 class="left">Graphic Design</h3>
-                            <p class="right">95%</p>
-                            <div class="range left" id="range1"></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="skill">
-                            <h3 class="left">Video Editing</h3>
-                            <p class="right">95%</p>
-                            <div class="range left" id="range2"></div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-    </section>
-
-    <section class="tools">
-        <!-- Headings -->
-        <div class="back-heading">
-            <h1 class="fade-heading">Tool</h1>
-            <div class="front-heading">
-                <h2 class="heading">My <span class="spantxt">Tools</span></h2>
-            </div>
-        </div>
-        <div class="tool-content">
-            <div class="tool left">
-                <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-photoshop--v1.png" alt="adobe-photoshop--v1"/>
-                <h4>Adobe Photoshop</h4> 
-            </div>
-
-            <div class="tool right">
-                <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-premiere-pro--v1.png" alt="adobe-premiere-pro--v1"/>
-                <h4>Adobe Premiere Pro</h4>
-            </div>
-
-            <div class="tool left">
-                <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-after-effects--v1.png" alt="adobe-after-effects--v1"/>
-                <h4>Adobe After Effects</h4>
-            </div>
-
-            <div class="tool right">
-                <img width="48" height="48" src="https://img.icons8.com/color/48/adobe-illustrator--v1.png" alt="adobe-illustrator--v1"/>
-                <h4>Adobe Illustrator</h4>
+        <!-- Skills -->
+        <div class="skill-content"> 
+            <!-- Headings -->
+            <div class="back-heading">
+                <h1 class="fade-heading">Skills</h1>
+                <div class="front-heading">
+                    <h2 class="heading">My <span class="spantxt">Skills</span></h2>
+                </div>
             </div> 
+            <div class="skill">
+                <h3 class="left">Graphic Design</h3>
+                <p class="right">95%</p>
+                <div class="range left" id="range1"></div>
+            </div>
+            <div class="skill">
+                <h3 class="left">Video Editing</h3>
+                <p class="right">95%</p>
+                <div class="range left" id="range2"></div>
+            </div>
+        </div>
+
+        <div class="tools">
+            <!-- Headings -->
+            <div class="back-heading">
+                <h1 class="fade-heading">Tools</h1>
+                <div class="front-heading">
+                    <h2 class="heading">My <span class="spantxt">Tools</span></h2>
+                </div>
+            </div>
+
+            <!-- Tools -->
+            <div class="tool-content">
+                <div class="tool left">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-photoshop--v1.png" alt="adobe-photoshop--v1"/>
+                    <h4>Adobe Photoshop</h4> 
+                </div>
+
+                <div class="tool right">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-premiere-pro--v1.png" alt="adobe-premiere-pro--v1"/>
+                    <h4>Adobe Premiere Pro</h4>
+                </div>
+
+                <div class="tool left">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-after-effects--v1.png" alt="adobe-after-effects--v1"/>
+                    <h4>Adobe After Effects</h4>
+                </div>
+
+                <div class="tool right">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/adobe-illustrator--v1.png" alt="adobe-illustrator--v1"/>
+                    <h4>Adobe Illustrator</h4>
+                </div> 
+            </div>
         </div>
     </section>
 
