--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 <body>
+    <!-- Header -->
     <header class="header">        
         <!-- Navbar -->
         <nav class="navbar">
@@ -19,6 +20,8 @@
             <a href="./pages/contact.html">Contact</a>
         </nav>
     </header>
+
+    <!-- Home -->  
     <section class="home">
         <div class="home-content">
             <h1 class="intro">Shahadat <span class="orange">Hussain</span></h1>
@@ -29,12 +32,14 @@
             <a href="#" class="btn">Resume</a>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer>
         <div class="social-media">
             <a href="https://www.facebook.com/thegfxbeast?mibextid=ZbWKwL" target="_blank"><i class="bx bxl-facebook"></i></a>
             <a href="https://www.instagram.com/mr.everythiiing" target="_blank"><i class="bx bxl-instagram"></i></a>
             <a href="https://youtube.com/@mr.everythiiing" target="_blank"><i class="bx bxl-youtube"></i></a>
-            <a href="#" target="_blank"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/shahadat-hussain-2b1341230/" target="_blank"><i class="bx bxl-linkedin"></i></a>
             <a href="https://www.behance.net/thegfxbeast" target="_blank"><i class="bx bxl-behance"></i></a>
         </div>
     </footer>
