modified:   code clean up

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./style/home.css">
     <link rel="stylesheet" href="./style/media.css">
+
+    <!-- Icon CSS -->
 	<link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 <body>
@@ -21,12 +25,16 @@
         </nav>
     </header>
 
-    <!-- Home -->  
+    <!-- Home Section -->  
     <section class="home">
+
+        <!-- Home Content -->
         <div class="home-content">
             <h1 class="intro">Shahadat <span class="orange">Hussain</span></h1>
             <h2 class="prof">A <span class="multitext"></span></h2>
         </div>
+
+        <!-- Button Container -->
         <div class="btn-container">
             <a href="./pages/contact.html" class="btn">Hire Me</a>
             <a href="#" class="btn">Resume</a>
@@ -35,6 +43,8 @@
 
     <!-- Footer -->
     <footer>
+
+        <!-- Social Links Container -->
         <div class="social-media">
             <a href="https://www.facebook.com/thegfxbeast?mibextid=ZbWKwL" target="_blank"><i class="bx bxl-facebook"></i></a>
             <a href="https://www.instagram.com/mr.everythiiing" target="_blank"><i class="bx bxl-instagram"></i></a>
