modified:   code clean up

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="../style/home.css">
     <link rel="stylesheet" href="../style/about.css">
     <link rel="stylesheet" href="../style/media.css">
 </head>
 <body>
-    <header class="header">
 
-        <!-- Logo -->
-        
+    <!-- Header -->
+    <header class="header">
         <!-- Navbar -->
         <nav class="navbar">
             <a href="../index.html">Home</a>
@@ -21,19 +22,35 @@
             <a href="./work.html">Work</a>
             <a href="./contact.html">Contact</a>
         </nav>
-
     </header>
 
+    <!-- About Section -->
     <section class="about">
+
+        <!-- Profile Image -->
         <img src="../images/Image1.jpeg">
+
+        <!-- Profile Content -->
         <div class="about-content">
-                <h1 class="intro">Shahadat <span class="orange">Hussain</span></h1>
-                <h2 class="prof">A <span class="multitext">Graphic Designer</span></h2>
-                <hr class="dash">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo est iure molestiae, commodi praesentium voluptatum perferendis totam impedit corrupti nobis omnis maxime inventore ipsa!</p>
-                <div class="bottom">
-                    <a href="#" class="btn">Learn More</a>
-                </div>
+
+            <!-- Titles -->
+            <h1 class="intro">Shahadat <span class="orange">Hussain</span></h1>
+            <h2 class="prof">A <span class="multitext">Graphic Designer</span></h2>
+
+            <!-- Divider -->
+            <hr class="dash">
+
+            <!--About Paragraph -->
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Numquam nemo est iure molestiae, 
+                commodi praesentium voluptatum perferendis totam impedit corrupti nobis omnis maxime inventore ipsa!
+            </p>
+            
+            <!-- Button Container -->
+            <div class="bottom">
+                <a href="#" class="btn">Learn More</a>
+            </div>
         </div>
     </section>
 
@@ -45,5 +62,6 @@
 
 	<!-- JavaScript -->
 	<script src="../script/about_script.js"></script>
+
 </body>
 </html>
