modified:   code clean up

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="../style/home.css">
     <link rel="stylesheet" href="../style/skills.css">
     <link rel="stylesheet" href="../style/media.css">
 </head>
 <body>
-    <header class="header">
 
-        <!-- Logo -->
-        
+    <!-- Header -->
+    <header class="header">   
         <!-- Navbar -->
         <nav class="navbar">
             <a href="../index.html">Home</a>
@@ -21,63 +22,88 @@
             <a href="./work.html">Work</a>
             <a href="./contact.html">Contact</a>
         </nav>
-
     </header>
 
+    <!-- Skills Section -->
     <section class="skills">
-        <!-- Skills -->
+
+        <!-- Skill Content -->
         <div class="skill-content"> 
+
             <!-- Headings -->
             <div class="back-heading">
+
+                <!-- Fade Heading -->
                 <h1 class="fade-heading">Skills</h1>
+
+                <!-- Front Heading -->
                 <div class="front-heading">
                     <h2 class="heading">My <span class="spantxt">Skills</span></h2>
                 </div>
             </div> 
-            <div class="skill">
+
+            <!-- Skill 1 Details -->
+            <div class="skill" id="skill-1">
                 <h3 class="left">Graphic Design</h3>
                 <p class="right">95%</p>
                 <div class="range left" id="range1"></div>
             </div>
-            <div class="skill">
+
+            <!-- Skill 2 Details -->
+            <div class="skill" id="skill-2">
                 <h3 class="left">Video Editing</h3>
                 <p class="right">95%</p>
                 <div class="range left" id="range2"></div>
             </div>
+
         </div>
 
+        <!-- Tools Section -->
         <div class="tools">
+
             <!-- Headings -->
             <div class="back-heading">
-                <h1 class="fade-heading">Tools</h1>
-                <div class="front-heading">
-                    <h2 class="heading">My <span class="spantxt">Tools</span></h2>
-                </div>
-            </div>
 
-            <!-- Tools -->
+                <!-- Fade Heading -->
+                <h1 class="fade-heading">Skills</h1>
+
+                <!-- Front Heading -->
+                <div class="front-heading">
+                    <h2 class="heading">My <span class="spantxt">Skills</span></h2>
+                </div>
+            </div> 
+
+            <!-- Tools Content-->
             <div class="tool-content">
+
+                <!-- Tool 1 -->
                 <div class="tool left">
                     <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-photoshop--v1.png" alt="adobe-photoshop--v1"/>
                     <h4>Adobe Photoshop</h4> 
                 </div>
 
+                <!-- Tool 2 -->
                 <div class="tool right">
                     <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-premiere-pro--v1.png" alt="adobe-premiere-pro--v1"/>
                     <h4>Adobe Premiere Pro</h4>
                 </div>
 
+                <!-- Tool 3 -->
                 <div class="tool left">
                     <img width="48" height="48" src="https://img.icons8.com/color/48/000000/adobe-after-effects--v1.png" alt="adobe-after-effects--v1"/>
                     <h4>Adobe After Effects</h4>
                 </div>
 
+                <!-- Tool3 -->
                 <div class="tool right">
                     <img width="48" height="48" src="https://img.icons8.com/color/48/adobe-illustrator--v1.png" alt="adobe-illustrator--v1"/>
                     <h4>Adobe Illustrator</h4>
                 </div> 
+
             </div>
+
         </div>
+
     </section>
 
     <!-- Scroll Reveal -->
