modified:   pages/skills.html 	modified:   pages/work.html 	modified:   style/media.css

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -65,11 +65,11 @@
             <div class="back-heading">
 
                 <!-- Fade Heading -->
-                <h1 class="fade-heading">Skills</h1>
+                <h1 class="fade-heading">Tools</h1>
 
                 <!-- Front Heading -->
                 <div class="front-heading">
-                    <h2 class="heading">My <span class="spantxt">Skills</span></h2>
+                    <h2 class="heading">My <span class="spantxt">Tools</span></h2>
                 </div>
             </div> 
 
