--- a/pages/work.html
+++ b/pages/work.html
@@ -117,11 +117,11 @@
         <div class="back-heading">
 
             <!-- Fade Heading -->
-            <h1 class="fade-heading">Graphics</h1>
+            <h1 class="fade-heading">Videos</h1>
 
             <!-- Front Heading -->
             <div class="front-heading">
-                <h2 class="heading">Graphic <span class="spantxt">Design</span></h2>
+                <h2 class="heading">Video <span class="spantxt">Edits</span></h2>
             </div>
 
         </div>
@@ -132,11 +132,11 @@
         <div class="back-heading">
 
             <!-- Fade Heading -->
-            <h1 class="fade-heading">Graphics</h1>
+            <h1 class="fade-heading">Coming</h1>
 
             <!-- Front Heading -->
             <div class="front-heading">
-                <h2 class="heading">Graphic <span class="spantxt">Design</span></h2>
+                <h2 class="heading">Coming <span class="spantxt">Soon</span></h2>
             </div>
 
         </div>
