new file:   images/thumbnail1.png 	new file:   images/thumbnail2.png 	new file:   images/thumbnail3.png 	new file:   images/thumbnail4.png 	modified:   pages/about.html 	modified:   pages/work.html 	modified:   style/home.css 	modified:   style/media.css 	modified:   style/work.css 	new file:   videos/video1.mp4 	new file:   videos/video2.mp4 	new file:   videos/video3.mp4 	new file:   videos/video4.mp4

--- a/pages/work.html
+++ b/pages/work.html
@@ -27,10 +27,8 @@
         </nav>
     </header>
 
-    <!-- Work Section -->
+    <!-------- Graphic Works --------->
     <section class="work">
-
-        <!-------- Graphic Works --------->
 
         <!-- Headings -->
         <div class="back-heading">
@@ -113,32 +111,57 @@
         
         <!---------- Video Edit Works ---------->
 
-        <!-- Headings -->
-        <div class="back-heading">
+        <div class="video-content">
 
-            <!-- Fade Heading -->
-            <h1 class="fade-heading">Videos</h1>
+            <!-- Headings -->
+            <div class="back-heading">
 
-            <!-- Front Heading -->
-            <div class="front-heading">
-                <h2 class="heading">Video <span class="spantxt">Edits</span></h2>
+                <!-- Fade Heading -->
+                <h1 class="fade-heading">Videos</h1>
+
+                <!-- Front Heading -->
+                <div class="front-heading">
+                    <h2 class="heading">Video <span class="spantxt">Edits</span></h2>
+                </div>
+
             </div>
 
-        </div>
+            <!-- Videos Cards -->
+            <div class="video-container">
 
-        <!-- Coming Soon Section -->
+                <!-- Video 1 -->
+                <div class="video left">
+                    <video muted controls poster="../images/thumbnail1.png">
+                        <source src="../videos/video1.mp4" type="video/mp4">
+                        Video Not Supported
+                    </video>
+                </div>
 
-        <!-- Headings -->
-        <div class="back-heading">
+                <!-- Video 2 -->
+                <div class="video right">
+                    <video muted controls poster="../images/thumbnail2.png">
+                        <source src="../videos/video2.mp4" type="video/mp4">
+                        Video Not Supported
+                    </video>
+                </div>
 
-            <!-- Fade Heading -->
-            <h1 class="fade-heading">Coming</h1>
+                <!-- Video 3 -->
+                <div class="video left">
+                    <video muted controls poster="../images/thumbnail3.png">
+                        <source src="../videos/video3.mp4" type="video/mp4">
+                        Video Not Supported
+                    </video>
+                </div>
 
-            <!-- Front Heading -->
-            <div class="front-heading">
-                <h2 class="heading">Coming <span class="spantxt">Soon</span></h2>
+                <!-- Video 4 -->
+                <div class="video right">
+                    <video muted controls poster="../images/thumbnail4.png">
+                        <source src="../videos/video4.mp4" type="video/mp4">
+                        Video Not Supported
+                    </video>
+                </div>
+
             </div>
-
         </div>
 
     </section>
