--- a/pages/about.html
+++ b/pages/about.html
@@ -49,7 +49,7 @@
             
             <!-- Button Container -->
             <div class="bottom">
-                <a href="#" class="btn">Learn More</a>
+                <a href="./contact.html" class="btn">Get In Touch</a>
             </div>
         </div>
     </section>
