modified:   pages/work.html 	modified:   script/work_script.js 	modified:   style/about.css 	modified:   style/contact.css 	modified:   style/skills.css 	modified:   style/work.css

--- a/pages/work.html
+++ b/pages/work.html
@@ -130,8 +130,8 @@
             <div class="video-container">
 
                 <!-- Video 1 -->
-                <div class="video left">
-                    <video muted controls poster="../images/thumbnail1.png">
+                <div class="video left" id="video">
+                    <video muted controls pl poster="../images/thumbnail1.png">
                         <source src="../videos/video1.mp4" type="video/mp4">
                         Video Not Supported
                     </video>
