--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,7 +51,9 @@
                 </div>
     
                 <textarea class="left" name="message" placeholder="Your Message" rows="10" cols="30" required></textarea>
-                <input type="submit" value="Send Message" class="btn bottom">
+                <div class="bottom">
+                    <input type="submit" value="Send Message" class="btn">
+                </div>
             </form>
         </div>
     </section>
