--- a/pages/work.html
+++ b/pages/work.html
@@ -131,7 +131,7 @@
 
                 <!-- Video 1 -->
                 <div class="video left" id="video">
-                    <video muted controls pl poster="../images/thumbnail1.png">
+                    <video muted controls poster="../images/thumbnail1.png">
                         <source src="../videos/video1.mp4" type="video/mp4">
                         Video Not Supported
                     </video>
